# AI-Content-Automation-Engine

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: database.py  main.py  models.py
backend/routers/: ideas.py  media.py  pipeline.py  templates.py
flows/image_content_generator/pipeline/: pipeline.py  schemas.py  storage_db.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: Config.tsx  Dashboard.tsx  IdeaDetail.tsx
tools/youtube/: publish.py
